infra/k8s/comments-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: heet1996/comments
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
  - name: comments
    protocol: TCP
    port: 4001
    targetPort: 4001
