infra/k8s/moderation-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: heet1996/moderation
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
  - name: moderation
    protocol: TCP
    port: 4003
    targetPort: 4003
