infra/k8s/post-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: heet1996/posts
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
