infra/k8s/query-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: heet1996/query
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
